2008-08-07  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkclist.c
	* gtk/gtkcontainer.c
	* gtk/gtkfilechooserbutton.c
	* gtk/gtkgamma.c
	* gtk/gtkmenutoolbutton.c
	* gtk/gtkoptionmenu.c
	* gtk/gtkradiobutton.c
	* gtk/gtkradiomenuitem.c
	* gtk/gtktipsquery.c
	* gtk/gtktree.c
	* gtk/gtktreeview.c: chain up unconditionally in destroy().

	* gtk/gtkhandlebox.c: remove empty destroy() implementation.

2008-08-07  Michael Natterer  <mitch@imendio.com>

	Bug 546756 – gnome-panel crashed with SIGSEGV in
	g_type_check_instance_cast()

	* gtk/gtkimagemenuitem.c: add GtkObject::destroy() implementation
	and remove the image now that it's an internal child and isn't
	destroyed by gtk_container_destroy() any longer. Thanks to tml for
	helping bisecting this down.

2008-08-07  Sven Neumann  <sven@gimp.org>

	Bug 546771 - Add writable property "visited" to GtkLinkButton

	* gtk/gtk.symbols
	* gtk/gtklinkbutton.[ch]: expose the 'visited' state as a
	read-write property with getters and setters. Also move the nick
	and blurb of the "uri" property to the proper translation domain.

2008-08-07  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkicontheme.c (apply_emblems): move variables to local
	scopes, fix indentation and silence bogus warning about using
	uninitialized variables.

2008-08-07  Richard Hult  <richard@imendio.com>

	Bug 535573 – Deadlock in gdkeventloop-quartz.c:poll_func()

	* gdk/quartz/gdkeventloop-quartz.c: (gdk_event_prepare),
	(select_thread_func), (poll_func): Patch by Yevgen Muntyan, fixes
	deadlock and missing events.

2008-08-07  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkscreen-quartz.c: (gdk_screen_get_monitor_plug_name)
	(gdk_screen_get_monitor_height_mm, gdk_screen_get_monitor_width_mm):
	Implement those, fixes loading python bindings.

2008-08-07  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 545031 – list of recently used files is created world-readable

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_real_changed): Set the recently-used.xbel